--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,12 +1,10 @@
 .hero-container {
-    height: 30vh;
+    height: 25vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     object-fit: contain;
     justify-content: center;
-    margin-top: 20px;
-    margin-bottom: 50px;
 }
 
 .hero-container p {
@@ -15,4 +13,11 @@
     color: #1c1c1c;
     text-align: left;
     font-size: 30px;
+}
+
+@media only screen and (max-width: 1200px) {
+    .hero-container  {
+        height: 250px;
+        padding-bottom: 30px;
+    }
 }
